show off the redesign (#284)
* add copy and polish to onboarding

* add a wip front-end to the redesigned member application

* allow application v1 & v2 to coexist